influx-ingress-prelive.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: influx
  namespace: metrics
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: influx-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: infraprelive.veyo.io
    http:
      paths:
      - path: /influx
        backend:
          serviceName: influx-influxdb
          servicePort: 8086
  tls:
  - hosts:
    - infraprelive.veyo.io
    secretName: tls-certs
