prometheus-ingress-live.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: metrics
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: prometheus-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: prometheus.veyo.io
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-server
          servicePort: 80
  tls:
  - hosts:
    - prometheus.veyo.io
    secretName: tls-certs
